--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,31 +73,21 @@ nav .menu-btn {
 .banner h1
 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 4em;
+    font-size: 4rem;
     text-align: center;
     margin: 50px;
 }
 
 .banner p
 {
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.1rem;
     margin: 30px;
     padding: 40px;
 }
 
-.banner a
-{
-    background-color: #480C39;
-    border-radius: 5px;
-    color: #ffff;
-    margin: 10px;
-    text-align: center;
-    text-decoration: none;
-    padding: 20px;
-}
 
-/* BANNER */
 
 /* FOOTER */
 footer .container{
@@ -275,5 +265,24 @@ h3{
 @media(max-width: 574px){
     footer .footer-col{
         width: 100%;
+    }
+
+    .banner
+    {
+        box-sizing: border-box;
+        width: 100%;
+        height: 20%;
+    }
+
+    .banner h1
+    {
+        /* font-size: 0.5rem; */
+        margin: 0;
+    }
+    
+    .banner p
+    {
+        font-size: 0.9 rem;
+        padding: 10px;
     }
 }
