--- a/stylesheet.css
+++ b/stylesheet.css
@@ -244,6 +244,35 @@ h3{
         background: none;
     }
     /* MENU NAVBAR */
+	
+	
+/*CONTACT*/
+	.contact{
+		background-color : #c8d6e5;
+		padding-top: 80px;
+	}
+	
+	input, textarea {
+		width: 400px;
+		margin-left : 30px;
+		margin-top: 10px;
+		margin-bottom: 30px;
+		padding: 20px;
+		font-size: 18px;
+		border: 1px solid #222f3e;
+	}
+
+	p {
+		margin-top: 20px;
+		margin-left : 30px;
+	}
+
+	.contact-submit {
+		background-color: #222f3e;
+		color: #f1f2f6;
+	}	
+/*CONTACT*/
+
 
     /* TEAM */
     .list {
